# oaSentinel

./: .env.example  .gitignore  README.md  cleanup_legacy.py  crowdhuman.yaml  pyproject.toml  setup.sh  setup_shell_aliases.sh  start_training_auto.sh  train_yolo11m.py
configs/: crowdhuman.yaml  default.yaml  test.yaml
data/test_dataset/: dataset.yaml  statistics.yaml
scripts/: check_ignored_files.sh  create_test_dataset.sh  detect_dataset.sh  download_data.sh  evaluate.sh  export.sh  process_data.sh  setup_automation.sh  train.sh
src/: __init__.py  cli.py
src/data_processing/: __init__.py  crowdhuman.py  processor.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/oasentinel/: __init__.py
src/oasentinel/data/: __init__.py  crowdhuman.py
src/oasentinel/evaluation/: __init__.py  evaluator.py
src/oasentinel/training/: __init__.py  trainer.py
src/training/: __init__.py  config.py  trainer.py
tests/: __init__.py  test_training.py
